<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaPlayer</string>
    <string name="action_settings">Settings</string>
     <string name="tab_music">Music</string>
     <string name="tab_video">Video</string>
    <string name="cont">con</string>
    <string name="title">titile</string>
    <string name="time">time</string>
    <string name="music_name">music name</string>
    <string name="singer">singer</string>
    <string name="music_start_time">00:00</string>
    <string name="music_end_time">03:00</string>

</resources>