<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dip"
    android:background="#00000000"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/video_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:contentDescription="@string/cont"
        android:paddingLeft="5dip"
         android:paddingRight="5dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/video_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/video_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="5dip"
        android:text="@string/time"
        android:textColor="#ffffff" />

</LinearLayout>