<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
          android:background="#000016"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/music_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#00000000"
                android:text="@string/music_name"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/music_singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/singer" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/music_loop"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/play_loop_sel" />

                <SeekBar
                    android:id="@+id/music_volume"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:max="100"
                    android:maxHeight="4.0dip"
                    android:minHeight="4.0dip"
                    android:progress="50"
                    android:progressDrawable="@drawable/po_seekbar"
                    android:thumb="@drawable/player_settings_bright_thumb" />

                <ImageButton
                    android:id="@+id/music_random"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/play_random" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/music_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="2dp"
                    android:text="@string/music_start_time" />

                <SeekBar
                    android:id="@+id/music_seekBar"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:maxHeight="4.0dip"
                    android:minHeight="4.0dip"
                    android:paddingLeft="2dip"
                    android:paddingRight="2dip"
                    android:progressDrawable="@drawable/po_seekbar"
                    android:thumb="@drawable/player_settings_bright_thumb" />

                <TextView
                    android:id="@+id/music_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:text="@string/music_end_time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/music_lasted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:background="#00000000"
                    android:src="@drawable/latest1" />

                <ImageButton
                    android:id="@+id/music_rewind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="#00000000"
                    android:src="@drawable/rewind" />

                <ImageButton
                    android:id="@+id/music_play"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:background="#00000000"
                    android:src="@drawable/play1" />

                <ImageButton
                    android:id="@+id/music_foward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:background="#00000000"
                    android:src="@drawable/foward" />

                <ImageButton
                    android:id="@+id/music_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/next1" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>